v0.3 (not released)
now does terrain saving when a board is created
control panel items are grey when inactive
can setup iConomy stakes - amount each player bets on winning (winner recieves double)
WorldEdit can instead be put in ChessCraft plugin folder or lib folder
moves players out of the way of moving chess pieces
games now auto-delete if not started 
pieces with nonsolid blocks (like torches) won't leave trails of items when they move
added an optional "panel" material definition in the board definition: control panel can be different than the frame
now automatically downloads Chesspresso-lib.jar if not found
major-ish code restructure
players now allowed to resign even when not their turn
players can now delete a game if they created it (or if not started & the person who joined left)
added partial-name matching for games
added option to highlight last move
- board definition can manually set material with "highlight"
- can also define "highlight_white_square & highlight_black_square""
boards are now redrawn on load (if style changed / worldedit mistakes)


v0.2.2 (18 Jul 2011)
Fixed a problem with en passant moves for Black
Fixed a problem with queen's side castling (was checking for King move to B file instead of C file - /facepalm)
Included twist.yml piece style by @ppp
When creating boards, you can now also add a '-pstyle <style>' option to override the board's default piece style. Should reduce the need to create new board definitions just to try out a different piece style.


v0.2.1 (13 Jul 2011):
Now only tells you if you are actually in one or more games at login


v0.2 (13 Jul 2011)
Piece selection/moving has changed: now pieces are selected & moved by waving a wand item 
- (new config item wand_item, default is empty hand) with left-click. 
- Much more usable, since it can be done from a distance - less running about the board needed. 
- Right-click still works but is deprecated and will print a warning every time it's used. 